Added main.js into body
should it be main.js or /main.js?

--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
     <meta name="description" content="fan site for Alison Ames" />
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body>
+  <body>     
     <header>
       <h1>Aly is a great writer</h1>
     </header>
     <main>
-      <p>She's the best</p>
+   <script src="main.js"></script>
     </main>
     <footer>
       <small>Leelu made this in 2024</small>
