Made an images folder
Also still not sure about linking to js in html

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
       <h1>Aly is a great writer</h1>
     </header>
     <main>
+      <!--  should it be /main.js not main.js?  <script src="/main.js"></script>
+ -->
    <script src="main.js"></script>
     </main>
     <footer>
