--- a/index.html
+++ b/index.html
@@ -6,19 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Aly is a great writer</title>
     <meta name="description" content="fan site for Alison Ames" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="/style.css" />
   </head>
-  <body>     
+  <body>
     <header>
       <h1>Aly is a great writer</h1>
     </header>
     <main>
-      <!--  should it be /main.js not main.js?  <script src="/main.js"></script>
- -->
-   <script src="main.js"></script>
     </main>
     <footer>
       <small>Leelu made this in 2024</small>
     </footer>
+   <script src="/main.js"></script>
   </body>
 </html>
