--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       <h1>Aly is a great writer</h1>
     </header>
     <main>
+      <div id="image-container"></div>
     </main>
     <footer>
       <small>Leelu made this in 2024</small>
